# meshroof

./: .gitmodules  CMakeLists.txt  Makefile  README.md
main/: CMakeLists.txt  EspWifi.cxx  EspWifi.hxx  MeshRoof.cxx  MeshRoof.hxx  MeshRoofShell.cxx  MeshRoofShell.hxx  meshroof.cxx  meshroof.h  serial.c  serial.h  shell.cxx
misc/: find_espressif_serial.sh  sdkconfig
